--- a/JavaScript2/ejercicio 3/style.css
+++ b/JavaScript2/ejercicio 3/style.css
@@ -1,3 +1,8 @@
+body{
+    font-family: sans-serif;
+    background: #ededed;
+}
+
 .grid-container{
     display: grid;
     grid-template-rows: 50px;
@@ -7,6 +12,15 @@
 
 .grid-container .grid-item{
     padding: 10px;
-    border: 1px solid #26a;
-    margin: 5px;
+    border: 2px solid #26a;
+    margin: 3px;
+    background: #fff;
+}
+
+.btn-confirmar{
+    padding: 9px 40px;
+    background: #48e;
+    color: #fff;
+    border: none;
+    margin: 30px;
 }
